# Language_bot

./: README.md  app.py  mistakes.db  pyproject.toml  requirements.txt
lang_bot/: langbot.py
lang_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
templates/: chat.html  start.html
